Fix the white-space nowrap bug

--- a/src/pages/blog/blog.module.scss
+++ b/src/pages/blog/blog.module.scss
@@ -46,3 +46,7 @@
   font-size: 0.9rem;
   margin-bottom: 1rem;
 }
+
+.rollTitle {
+  margin-top: 3rem;
+}
